feat: add role api
